--- a/style.css
+++ b/style.css
@@ -15,3 +15,19 @@
   margin: 0;
   width:100%;
 }
+
+.searchbox {
+  font-size:18px;
+  background-color: #78909C;
+  color: #fff;
+  
+}
+.mdl-button--icon {
+  color:white;
+}
+
+.tab-div {
+  -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+        box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+}
