--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 }
 .tab-footer {
   background-color: #78909C;
-  height: 16px;
+  height: auto;
   padding: 0;
   margin: 0;
   width:100%;
@@ -31,3 +31,11 @@
     -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
         box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
 }
+li {
+  list-style: none;
+}
+
+.reset > i {
+    float: right;
+    padding: 15px;
+    font-size: 32px;
