fix bug with user url to their profile

--- a/style.css
+++ b/style.css
@@ -39,3 +39,12 @@ li {
     float: right;
     padding: 15px;
     font-size: 32px;
+}
+
+.profile-pic {
+  width:30px;
+  height:30px;
+  border-radius:50%;
+}
+
+
